--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pmarsceill/just-the-docs
 title: UNC Dataverse User Guide
 color_scheme: customstyle
+logo: "/assets/images/UNCDataverseLogo1.png"
