--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 remote_theme: pmarsceill/just-the-docs
 title: UNC Dataverse User Guide
 color_scheme: customstyle
+url: https://agooch.github.io/testsite/
 logo: "/assets/images/UNCDataverseLogo1.png"
