--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: UNC Dataverse User Guide
 color_scheme: customstyle
 logo: "/assets/images/UNCDataverseLogo1.png"
 aux_links:
-  "Dataverse Project User Guide":
-    - "//guides.dataverse.org/en/5.3/user/"
+  "UNC Dataverse":
+    - "//dataverse.unc.edu/"
